attempt at clear button

--- a/shopping-list.html
+++ b/shopping-list.html
@@ -69,16 +69,14 @@
         </div>
 
         <div class="items-info">
-          <div class="items-number">
-            <span id="total"></span> items
-          </div>
+          <div class="items-number"><span id="total"></span> items</div>
           <div class="filter">
             <span class="active">All</span>
             <span>Active</span>
             <span>Completed</span>
           </div>
           <div class="controls">
-            <span>Clear Completed</span>
+            <span onclick="removeItem(id)">Clear Completed</span>
           </div>
         </div>
       </div>
