--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" sizes="192x192" href="/images/shopping-list/mobile-icon.png">
     <title>Shopping List App</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <style></style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
     <script src="/js/shopping-list/firebase.js"></script>
@@ -18,29 +18,33 @@
 </head>
 
 <body>
-    <header></header>
 
-    <div class="container">
-        <div class="anim-wrapper">
-            <div class="anim"></div>
-        </div>
-        <div class="title">
-            <h1>Shopping List</h1>
-        </div>
+    <ul id="tabs-swipe" class="tabs">
+        <li class="tab col s3"><a class="active" href="#shopping">Shopping</a></li>
+        <li class="tab col s3"><a href="#meals">Meals</a></li>
+    </ul>
 
-        <div class="create-item">
-            <div class="check">
-                <div class="emoji">👉</div>
+    <div id="shopping" class="col s12">
+        <header class="shopping-header"></header>
+        <div class="container">
+            <div class="anim-wrapper">
+                <div class="anim-shopping"></div>
             </div>
-            <div class="item-input">
-                <form onsubmit="addItem(event)">
-                    <input id="list-input" type="text" placeholder="Add items...">
-                </form>
+            <div class="title">
+                <h1 class="browser-default">Shopping List</h1>
             </div>
-        </div>
 
-        <button class="accordion">Shopping list</button>
-        <div class="panel">
+            <div class="create-item">
+                <div class="check">
+                    <div class="emoji">👉</div>
+                </div>
+                <div class="item-input">
+                    <form onsubmit="addItem(event)">
+                        <input id="list-input" type="text" class="browser-default" placeholder="Add items...">
+                    </form>
+                </div>
+            </div>
+
             <div class="shopping-list-wrapper">
                 <div class="shopping-list">
                     <div class="shopping-item">
@@ -56,123 +60,7 @@
                             <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
                         </div>
                     </div>
-                    <div class="shopping-item">
-                        <div class="check">
-                            <div data-id="61UnJVr1p1zu2GrRlrBS" class="check-mark ">
-                                <img src="/images/shopping-list/icon-check.svg">
-                            </div>
-                        </div>
-                        <div class="shopping-item-text ">
-                            Parcels
-                        </div>
-                        <div data-id="61UnJVr1p1zu2GrRlrBS" class="delete-item">
-                            <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
-                        </div>
-                    </div>
-                    <div class="shopping-item">
-                        <div class="check">
-                            <div data-id="8iXrhteH4iLNC4PBRLVh" class="check-mark ">
-                                <img src="/images/shopping-list/icon-check.svg">
-                            </div>
-                        </div>
-                        <div class="shopping-item-text ">
-                            Chocolate chip
-                        </div>
-                        <div data-id="8iXrhteH4iLNC4PBRLVh" class="delete-item">
-                            <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
-                        </div>
-                    </div>
-                    <div class="shopping-item">
-                        <div class="check">
-                            <div data-id="9EgyImucFUqUWyuXUOgP" class="check-mark ">
-                                <img src="/images/shopping-list/icon-check.svg">
-                            </div>
-                        </div>
-                        <div class="shopping-item-text ">
-                            Chocolate chinks
-                        </div>
-                        <div data-id="9EgyImucFUqUWyuXUOgP" class="delete-item">
-                            <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
-                        </div>
-                    </div>
-                    <div class="shopping-item">
-                        <div class="check">
-                            <div data-id="ZJKdbsmTPXPlnvRuOWsn" class="check-mark ">
-                                <img src="/images/shopping-list/icon-check.svg">
-                            </div>
-                        </div>
-                        <div class="shopping-item-text ">
-                            Buttevanilla essence
-                        </div>
-                        <div data-id="ZJKdbsmTPXPlnvRuOWsn" class="delete-item">
-                            <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
-                        </div>
-                    </div>
-                    <div class="shopping-item">
-                        <div class="check">
-                            <div data-id="e4yVpCYZthmTIxLkiVqp" class="check-mark ">
-                                <img src="/images/shopping-list/icon-check.svg">
-                            </div>
-                        </div>
-                        <div class="shopping-item-text ">
-                            Plain flour
-                        </div>
-                        <div data-id="e4yVpCYZthmTIxLkiVqp" class="delete-item">
-                            <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
-                        </div>
-                    </div>
-                    <div class="shopping-item">
-                        <div class="check">
-                            <div data-id="j2gynRCrBKeXXt3DIqrT" class="check-mark ">
-                                <img src="/images/shopping-list/icon-check.svg">
-                            </div>
-                        </div>
-                        <div class="shopping-item-text ">
-                            Wastepaper bin
-                        </div>
-                        <div data-id="j2gynRCrBKeXXt3DIqrT" class="delete-item">
-                            <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
-                        </div>
-                    </div>
-                    <div class="shopping-item">
-                        <div class="check">
-                            <div data-id="mNVzUnEs5KO5Zia5otjw" class="check-mark ">
-                                <img src="/images/shopping-list/icon-check.svg">
-                            </div>
-                        </div>
-                        <div class="shopping-item-text ">
-                            Boot slippers
-                        </div>
-                        <div data-id="mNVzUnEs5KO5Zia5otjw" class="delete-item">
-                            <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
-                        </div>
-                    </div>
-                    <div class="shopping-item">
-                        <div class="check">
-                            <div data-id="uNr3yHXdY1f8MOjel6tp" class="check-mark checked">
-                                <img src="/images/shopping-list/icon-check.svg">
-                            </div>
-                        </div>
-                        <div class="shopping-item-text checked">
-                            Chives
-                        </div>
-                        <div data-id="uNr3yHXdY1f8MOjel6tp" class="delete-item">
-                            <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
-                        </div>
-                    </div>
-                    <div class="shopping-item">
-                        <div class="check">
-                            <div data-id="wFO7GaZBxqimhEO8LMBe" class="check-mark ">
-                                <img src="/images/shopping-list/icon-check.svg">
-                            </div>
-                        </div>
-                        <div class="shopping-item-text ">
-                            Horrible histories books
-                        </div>
-                        <div data-id="wFO7GaZBxqimhEO8LMBe" class="delete-item">
-                            <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
-                        </div>
-                    </div>
+
                 </div>
 
                 <div class="items-info">
@@ -183,19 +71,78 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
 
-        <button class="accordion">Meals list</button>
-        <div class="panel">
-            <p>Lorem ipsum dolor sit amet, cons ectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+        <div id="meals" class="col s12">
+
+            <header class="meals-header"></header>
+            <div class="container">
+                <div class="anim-wrapper">
+                    <div class="anim-meals"></div>
+                </div>
+                <div class="title">
+                    <h1 class="browser-default">Meals List</h1>
+                </div>
+
+                <div class="create-item">
+                    <div class="check">
+                        <div class="emoji">👉</div>
+                    </div>
+                    <div class="item-input">
+                        <form onsubmit="addItem(event)">
+                            <input id="list-input" type="text" class="browser-default" placeholder="Add items...">
+                        </form>
+                    </div>
+                </div>
+
+                <div class="shopping-list-wrapper">
+                    <div class="shopping-list">
+
+                        <button class="accordion browser-default">Monday</button>
+                        <div class="panel">
+
+                        <div class="shopping-item">
+                            <div class="check">
+                                <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
+                                    <img src="/images/shopping-list/icon-check.svg">
+                                </div>
+                            </div>
+                            <div class="shopping-item-text ">
+                                Nail polish
+                            </div>
+                            <div data-id="57GyKmlSAYA8FbziVjOi" class="delete-item">
+                                <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
+                            </div>
+                        </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="items-info">
+                        <div class="items-number"><span id="total">10</span> items</div>
+                        <div class="controls">
+                            <span class="clear-complete"><img class="bin" src="/images/shopping-list/bin.svg">Clear
+                                Completed</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
-
-
 
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var tabs = document.querySelector('.tabs');
+            M.Tabs.init(tabs, {
+                swipeable: true
+            });
+        });
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
