Add date selectors

--- a/index.html
+++ b/index.html
@@ -92,9 +92,19 @@
                     </div>
                     <div class="item-input">
                         <form onsubmit="addItem(event)">
-                            <input id="list-input" type="text" class="browser-default" placeholder="Add items...">
+                            <input id="list-input" type="text" class="browser-default" placeholder="Add meals...">
                         </form>
                     </div>
+                </div>
+
+                <div class="date-select">
+                    <button class="date browser-default">Mon</button>
+                    <button class="date browser-default">Tue</button>
+                    <button class="date browser-default">Wed</button>
+                    <button class="date browser-default">Thur</button>
+                    <button class="date browser-default">Fri</button>
+                    <button class="date browser-default">Sat</button>
+                    <button class="date browser-default">Sun</button>
                 </div>
 
                 <div class="shopping-list-wrapper">
