Add meals list accordions

--- a/index.html
+++ b/index.html
@@ -114,12 +114,11 @@
     
                 </div>
 
-                <div class="shopping-list-wrapper">
+                <div class="meals-list-wrapper">
                     <div class="shopping-list">
 
                         <button class="accordion browser-default">Monday</button>
                         <div class="panel">
-
                         <div class="shopping-item">
                             <div class="check">
                                 <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
@@ -133,7 +132,108 @@
                                 <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
                             </div>
                         </div>
+                        </div>
 
+                        <button class="accordion browser-default">Tuesday</button>
+                        <div class="panel">
+                        <div class="shopping-item">
+                            <div class="check">
+                                <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
+                                    <img src="/images/shopping-list/icon-check.svg">
+                                </div>
+                            </div>
+                            <div class="shopping-item-text ">
+                                Nail polish
+                            </div>
+                            <div data-id="57GyKmlSAYA8FbziVjOi" class="delete-item">
+                                <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
+                            </div>
+                        </div>
+                        </div>
+
+                        <button class="accordion browser-default">Wednesday</button>
+                        <div class="panel">
+                        <div class="shopping-item">
+                            <div class="check">
+                                <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
+                                    <img src="/images/shopping-list/icon-check.svg">
+                                </div>
+                            </div>
+                            <div class="shopping-item-text ">
+                                Nail polish
+                            </div>
+                            <div data-id="57GyKmlSAYA8FbziVjOi" class="delete-item">
+                                <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
+                            </div>
+                        </div>
+                        </div>
+
+                        <button class="accordion browser-default">Thursday</button>
+                        <div class="panel">
+                        <div class="shopping-item">
+                            <div class="check">
+                                <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
+                                    <img src="/images/shopping-list/icon-check.svg">
+                                </div>
+                            </div>
+                            <div class="shopping-item-text ">
+                                Nail polish
+                            </div>
+                            <div data-id="57GyKmlSAYA8FbziVjOi" class="delete-item">
+                                <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
+                            </div>
+                        </div>
+                        </div>
+
+                        <button class="accordion browser-default">Friday</button>
+                        <div class="panel">
+                        <div class="shopping-item">
+                            <div class="check">
+                                <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
+                                    <img src="/images/shopping-list/icon-check.svg">
+                                </div>
+                            </div>
+                            <div class="shopping-item-text ">
+                                Nail polish
+                            </div>
+                            <div data-id="57GyKmlSAYA8FbziVjOi" class="delete-item">
+                                <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
+                            </div>
+                        </div>
+                        </div>
+
+                        <button class="accordion browser-default">Saturday</button>
+                        <div class="panel">
+                        <div class="shopping-item">
+                            <div class="check">
+                                <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
+                                    <img src="/images/shopping-list/icon-check.svg">
+                                </div>
+                            </div>
+                            <div class="shopping-item-text ">
+                                Nail polish
+                            </div>
+                            <div data-id="57GyKmlSAYA8FbziVjOi" class="delete-item">
+                                <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
+                            </div>
+                        </div>
+                        </div>
+
+                        <button class="accordion browser-default">Sunday</button>
+                        <div class="panel">
+                        <div class="shopping-item">
+                            <div class="check">
+                                <div data-id="57GyKmlSAYA8FbziVjOi" class="check-mark ">
+                                    <img src="/images/shopping-list/icon-check.svg">
+                                </div>
+                            </div>
+                            <div class="shopping-item-text ">
+                                Nail polish
+                            </div>
+                            <div data-id="57GyKmlSAYA8FbziVjOi" class="delete-item">
+                                <img src="/images/shopping-list/icon-cross.svg" alt="del-icon">
+                            </div>
+                        </div>
                         </div>
 
                     </div>
